# python_test_pkg_poetry

./: pyproject.toml
tests/: test_fn.py  test_poetry_ex.py
